@@ -94,10 +94,6 @@ Ext.define('TP.PanletChart', {
             }
         };
 
-        this.refreshHandler = function() {
-            TP.defaultSiteRefreshHandler(this);
-        },
-
         this.addListener('afterrender', function() {
             this.refreshHandler();
         });
