@@ -153,9 +153,6 @@
 
         this.add(this.grid);
 
-        this.refreshHandler = function() {
-            TP.defaultSiteRefreshHandler(this);
-        };
         this.addListener('afterrender', function() {
             this.grid.adjustPageSize();
         });
