@@ -12,10 +12,6 @@
         if(this.xdata.host    == undefined) { this.xdata.host    = '' }
         if(this.xdata.service == undefined) { this.xdata.service = '' }
 
-        this.refreshHandler = function() {
-            TP.defaultSiteRefreshHandler(this);
-        };
-
         /* load service data */
         this.loader = TP.ExtinfoPanelLoader(this),
         this.add(TP.ExtinfoPanel('service'));
