@@ -1,6 +1,8 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
+          - panorama
+            - performance improvements
           - Bug Fixes
             - fixed quoting downtime tasks
             - show error instead of empty result for a single failed instance
